# vllm-proxy

./: .env.example  Dockerfile  Dockerfile.mock  README.md  docker-compose.prod.yml  docker-compose.yml  locustfile.py  ollama-setup.sh  prometheus.yml  pyproject.toml  requirements.txt  test.sh
app/: config.py  main.py
grafana/dashboards/: vllm-proxy.json
mock_vllm/: server.py
nginx/: default.conf
nginx/html/: index.html
