[project]
name = "vllm-proxy"
version = "0.1.0"
description = "FastAPI proxy for Ollama/vLLM-compatible inference"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "prometheus-client==0.21.0",
    "pydantic-settings==2.5.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]